--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
-title: Just the Docs Template
-description: A starter template for a Jeykll site using the Just the Docs theme!
+title: ikeayoghurt
+description: Page to collect my knowledge
 theme: just-the-docs
 
-url: https://just-the-docs.github.io
+url: https://ikeayoghurt.github.io
 
 color_scheme: dark
 
 aux_links:
-  Template Repository: https://github.com/just-the-docs/just-the-docs-template
+  Template Repository: https://github.com/ikeayoghurt/ikeayoghurt.github.io
