--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: ikeayoghurt
 description: Page to collect my knowledge
 theme: just-the-docs
 
-url: https://ikeayoghurt.github.io
+url: https://github.com/ikeayoghurt/ikeayoghurt.github.io
 
 color_scheme: dark
 
