--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: ikeayoghurt
 description: Page to collect my knowledge
-theme: just-the-docs
+remote_theme: just-the-docs/just-the-docs
 
 url: https://github.com/ikeayoghurt/ikeayoghurt.github.io
 
