--- a/_config.yml
+++ b/_config.yml
@@ -9,3 +9,6 @@ permalink: pretty
 
 aux_links:
   Template Repository: https://github.com/ikeayoghurt/ikeayoghurt.github.io
+
+exclude:
+  - README.md
